# file_encryptor

./: Cargo.toml  README.md
src/: cli.rs  encryption.rs  filesystem.rs  kdf.rs  main.rs  styles.rs  utils.rs
