[package]
name = "crypt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes-gcm = "0.10.2"
argon2 = "0.5.2"
chacha20poly1305 = "0.10.1"
lazy_static = "1.4.0"
byteorder = "1.4.3"
clap = { version = "4.4.3", features = ["color", "help", "usage", "error-context", "derive", "unstable-styles"] }
anstyle = "1.0.3"
color-eyre = "0.6.2"
base64 = "0.21.5"
rpassword = "7.3.1"
